--- a/app/productos/templates/productos/index.html
+++ b/app/productos/templates/productos/index.html
@@ -39,7 +39,7 @@
                 <td>{{ producto.categoria.nombre }}</td>
                 <td>S/. {{ producto.precio }}</td>
                 <td>
-                    <a href="#" class="btn btn-outline-info btn-sm me-1">
+                    <a href="/productos/ver/{{ producto.id }}" class="btn btn-outline-info btn-sm me-1">
                         <i class="fas fa-eye"></i> 
                     </a>
                     <a href="/productos/editar/{{ producto.id }}" class="btn btn-outline-warning btn-sm me-1">
